<?xml version = "1.0" encoding = "utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:fitsSystemWindows = "true"
    android:overScrollMode = "never"
    app:layout_behavior = "@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:padding = "10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width = "70dp"
            android:layout_height = "100dp"
            android:id = "@+id/img_detail_poster"
            android:scaleType = "fitXY"
            tools:src = "@tools:sample/avatars"
            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintHorizontal_bias = "0"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"
            app:layout_constraintVertical_bias = "0"
            app:riv_corner_radius = "10dp" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:id = "@+id/tv_detail_name"
            android:layout_marginStart = "10dp"
            android:maxLines = "3"
            android:textColor = "#000"
            android:textSize = "18sp"
            android:textStyle = "bold"
            app:layout_constraintBottom_toBottomOf = "@id/img_detail_poster"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toEndOf = "@id/img_detail_poster"
            app:layout_constraintTop_toTopOf = "@id/img_detail_poster"
            tools:text = "Data Name" />

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/lb_desc"
            android:layout_marginTop = "10dp"
            android:text = "@string/lb_description"
            android:textColor = "@android:color/black"
            android:textStyle = "bold"
            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@id/img_detail_poster"
            app:layout_constraintVertical_bias = "0" />

        <TextView
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:id = "@+id/tv_detail_desc"
            android:layout_marginTop = "10dp"
            app:layout_constraintBottom_toBottomOf = "parent"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/lb_desc"
            tools:text = "This is Moview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>