...
            app:expandedTitleMarginStart = "15dp"
            app:layout_scrollFlags = "scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:id = "@+id/img_detail_hightlight"
                android:background = "@android:color/darker_gray"
                android:contentDescription = "@string/desc_image_highlight"
                android:fitsSystemWindows = "true"
                android:scaleType = "centerCrop"
                app:layout_collapseMode = "parallax" />

...

    <include layout = "@layout/content_detail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/fab_favorite"
        android:layout_marginEnd = "25dp"
        android:src = "@drawable/ic_favorite_false"
        app:backgroundTint = "@color/colorAccent"
        app:layout_anchor = "@id/app_bar_layout"
        app:layout_anchorGravity = "end|bottom|right"
        app:maxImageSize = "28dp" />
...
